--- a/data/maps/earth/behaim1492/legend.html
+++ b/data/maps/earth/behaim1492/legend.html
@@ -32,14 +32,14 @@
 <!-- You can still appendfurther html and Marble-specific html attributes here: -->
 
 <p>
-    <a href="http://en.wikipedia.org/wiki/Martin_Behaim"><img src="./legend/Martin_Behaim.jpg"></a>
+    <a href="https://en.wikipedia.org/wiki/Martin_Behaim"><img src="./legend/Martin_Behaim.jpg"></a>
 </p>
-<p><a href="http://en.wikipedia.org/wiki/Martin_Behaim">Martin Behaim</a> and collaborators created the globe at the time of <a href="http://en.wikipedia.org/wiki/Christopher_Columbus">Columbus</a>' first sea travel to the west.
+<p><a href="https://en.wikipedia.org/wiki/Martin_Behaim">Martin Behaim</a> and collaborators created the globe at the time of <a href="https://en.wikipedia.org/wiki/Christopher_Columbus">Columbus</a>' first sea travel to the west.
 <p>So the American continent is missing on this globe. Also note the detailed inscriptions in early modern German. The overall design of the map image follows the Ptolemaic tradition where the circumference of the earth is 5/7 of the actual value (40075 km).
 </p>
 <p><strong>Recommended Links:</strong>
 <ul>
-<li><a href="http://www.gnm.de/index.php?id=181">Digitalization of the Behaim Globe in 2011</a> (German)
+<li><a href="https://www.gnm.de/index.php?id=181">Digitalization of the Behaim Globe in 2011</a> (German)
 <li><a href="http://wisski.cs.fau.de/behaim/">Wisski Portal </a> (German)
 <li><a href="http://www8.informatik.uni-erlangen.de/IMMD8/staff/Goerz/behaim-icom2010-nofoot-images.pdf">Semantic Annotation for Medieval Cartography:</a> The Example of the Behaim Globe of 1492
 <li><a href="http://wisski.cs.fau.de/behaim/sites/default/files/poussami.3D-Modellierung_Behaim-Globus_Marble.pdf">3D-Modellierung des Behaim-Globus mit Marble (PDF)</a> (German)
@@ -49,7 +49,7 @@
 <hr>
 <p>
 <i><small>
-Copyright: <a href="http://www.gnm.de/en">Germanisches Nationalmuseum</a> / <a href="http://www.ipf.tuwien.ac.at">IPF TU Wien</a></small></i>
+Copyright: <a href="https://www.gnm.de/en">Germanisches Nationalmuseum</a> / <a href="https://www.geo.tuwien.ac.at/">IPF TU Wien</a></small></i>
 <br><i>License: <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a></i>
 <br>
 </body>
