--- a/src/plugins/render/satellites/data/satellite.html
+++ b/src/plugins/render/satellites/data/satellite.html
@@ -15,10 +15,10 @@
   <td colspan="2">Coordinates</td>
 </tr>
 <tr>
-  <td><a href="http://en.m.wikipedia.org/wiki/Longitude">Longitude</a></td><td>%longitude%</td>
+  <td><a href="https://en.m.wikipedia.org/wiki/Longitude">Longitude</a></td><td>%longitude%</td>
 </tr>
 <tr>
-  <td><a href="http://en.m.wikipedia.org/wiki/Latitude">Latitude</a></td><td>%latitude%</td>
+  <td><a href="https://en.m.wikipedia.org/wiki/Latitude">Latitude</a></td><td>%latitude%</td>
 </tr>
 <tr>
   <td>Altitude</a></td><td>%altitude% m</td>
@@ -35,26 +35,26 @@
   <td colspan="2">Orbital data</td>
 </tr>
 <tr>
-  <td><a href="http://en.m.wikipedia.org/wiki/Apsis">Perigee</a></td><td>%perigee% km</td>
+  <td><a href="https://en.m.wikipedia.org/wiki/Apsis">Perigee</a></td><td>%perigee% km</td>
 </tr>
 <tr>
-  <td><a href="http://en.m.wikipedia.org/wiki/Apsis">Apogee</a></td><td>%apogee% km</td>
+  <td><a href="https://en.m.wikipedia.org/wiki/Apsis">Apogee</a></td><td>%apogee% km</td>
 </tr>
 <tr>
-  <td><a href="http://en.m.wikipedia.org/wiki/Inclination">Inclination</a> (<i>i</i>)</td><td>%inclination%&deg;</td>
+  <td><a href="https://en.m.wikipedia.org/wiki/Inclination">Inclination</a> (<i>i</i>)</td><td>%inclination%&deg;</td>
 </tr>
 <tr>
-  <td><a href="http://en.m.wikipedia.org/wiki/Orbital_period">Period</a> (<i>P</i>)</td><td>%period% min</td>
+  <td><a href="https://en.m.wikipedia.org/wiki/Orbital_period">Period</a> (<i>P</i>)</td><td>%period% min</td>
 </tr>
 <tr>
-  <td><a href="http://en.m.wikipedia.org/wiki/Semi-major_axis">Semi-major axis</a> (<i>a</i>)</td><td>%semiMajorAxis% km</td>
+  <td><a href="https://en.m.wikipedia.org/wiki/Semi-major_axis">Semi-major axis</a> (<i>a</i>)</td><td>%semiMajorAxis% km</td>
 </tr>
 </table>
 
 <hr>
 
-<p>Earth-Satellites orbital elements from <a href="http://www.celestrak.com">http://www.celestrak.com</a>.
-<p>Planetary-Satellites orbital elements from <a href="http://tasc.esa.int/">ESA TASC service</a> and <a href="http://ssd.jpl.nasa.gov/?horizons">JPL Horizons</a>
+<p>Earth-Satellites orbital elements from <a href="https://www.celestrak.com">http://www.celestrak.com</a>.
+<p>Planetary-Satellites orbital elements from <a href="https://ssd.jpl.nasa.gov/?horizons">JPL Horizons</a>
 
 </body>
 </html>
